compiler/tests/fa/errors/toplevel_pub_func_not_at_end.salam
// انتظار: خطا۰۸۸
// زبان: فارسی
عمومی تابع الف: بازگشت 1 تمام

تابع ب: بازگشت 2 تمام

تابع اصلی: تمام
